# spirit

./: Makefile.am  configure.ac
calc1/: Makefile.am  calc.ebnf  calc1.cc
calc2/: Makefile.am  calc2.cc
calc3/: Makefile.am  calc3.cc  fusion-test.cc  std_visit.cc
calc4/: Makefile.am  calc4.cc
calc5/: Makefile.am  calc5.cc
emplnofusion/: Makefile.am  employee1.cc  employee2.cc  employee3.cc  main.cc
employee/: Makefile.am  ast_adapted.h  employee.cc  employee.h  employee_def.h  main.cc
inline/: Makefile.am  inline_parser.cc
jsonpath/: Makefile.am  json.bnf  jsonpath.cc  jsonpath.ebnf  jsonpath.hpp  jsp.cc  test-01.json
roman/: Makefile.am  roman.cc  roman2.cc
variant/: Makefile.am  variant.cc
